--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.0",
+    "@nestjs/serve-static": "^3.0.0",
     "@types/sequelize": "^4.28.14",
+    "axios": "^1.1.2",
     "dotenv": "^16.0.3",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sass": "^1.55.0",
     "sequelize": "^6.24.0",
     "sequelize-typescript": "^2.1.3"
   },
